word wrapping fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,6 +81,7 @@ body {
     bottom: 20px;
     right: 25px;
     cursor: pointer;
+    word-wrap: break-word;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.2s cubic-bezier(.25, .8, .25, 1);
 }
@@ -207,6 +208,16 @@ body {
         height: 64px;
         margin: 5px !important;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    }
+
+    .invisible-button{
+        width: 18px;
+        height: 30px;
+    }
+
+    .delete-button{
+        width: 18px;
+        height: 30px;
     }
 }
 
